feat: password hashing
