# src/app/auth/auth.dto.ts
@@ -3,6 +3,12 @@ import { ApiProperty } from "@nestjs/swagger";
 export class AuthDto {
   @ApiProperty()
   username: string;
+
   @ApiProperty()
   password: string;
+}
+
+export class LoginResponse {
+  @ApiProperty()
+  userId: string;
 }
